tests/ui/suggestions/issue-85347.stderr
error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/issue-85347.rs:3:42
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                          ^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-85347.rs:3:10
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |          ^^^ --
help: add missing lifetime argument
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<'a, Target = Self>>;
   |                                              +++

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-85347.rs:3:46
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                              ^^^^^^^^^^^^^ associated item constraint not allowed here
   |
help: consider removing this associated item binding
   |
LL -     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
LL +     type Bar<'a>: Deref<Target = <Self>::Bar>;
   |

error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/issue-85347.rs:3:42
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                          ^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-85347.rs:3:10
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |          ^^^ --
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add missing lifetime argument
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<'a, Target = Self>>;
   |                                              +++

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-85347.rs:3:46
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                              ^^^^^^^^^^^^^ associated item constraint not allowed here
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider removing this associated item binding
   |
LL -     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
LL +     type Bar<'a>: Deref<Target = <Self>::Bar>;
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0107, E0229.
For more information about an error, try `rustc --explain E0107`.
